sliders images defer

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
               src="./assets/images/slider/nicholas-green.webp"
               class="d-block w-100"
               alt="..."
+              loading="lazy"
             />
           </div>
           <div class="carousel-item">
@@ -89,6 +90,7 @@
               src="./assets/images/slider/edward-cisneros.webp"
               class="d-block w-100"
               alt="..."
+              loading="lazy"
             />
           </div>
         </div>
