--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Nina Carducci - L'art de la photographie</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/bootstrap/bootstrap.css" />
     <link rel="stylesheet" href="./assets/style.css" />
@@ -35,7 +36,7 @@
               class="social-link"
               href="https://www.instagram.com/ninacarducci.photo/?hl=fr"
               target="_blank"
-              ><img src="assets/images/instagram.png" alt=""
+              ><img src="assets/images/instagram.png" alt="Logo de Instagram"
             /></a>
           </li>
         </ul>
@@ -74,14 +75,14 @@
             <img
               src="./assets/images/slider/ryoji-iwata.webp"
               class="d-block w-100"
-              alt="..."
+              alt="Passage piéton"
             />
           </div>
           <div class="carousel-item">
             <img
               src="./assets/images/slider/nicholas-green.webp"
               class="d-block w-100"
-              alt="..."
+              alt="Concert de musique"
               loading="lazy"
             />
           </div>
@@ -89,7 +90,7 @@
             <img
               src="./assets/images/slider/edward-cisneros.webp"
               class="d-block w-100"
-              alt="..."
+              alt="Photographie de mariage"
               loading="lazy"
             />
           </div>
@@ -116,7 +117,7 @@
     </div>
     <div id="about">
       <div class="picture left">
-        <img src="./assets/images/nina.webp" />
+        <img src="./assets/images/nina.webp" alt="Nina Carducci" />
       </div>
       <div id="about-me">
         <h3 class="about-me__title">A propos de moi</h3>
@@ -145,46 +146,55 @@
             data-gallery-tag="Concert"
             class="gallery-item"
             src="./assets/images/gallery/concerts/aaron-paul.webp"
+            alt="Concert de musique - Aaron Paul"
           />
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
             src="./assets/images/gallery/entreprise/ali-morshedlou.webp"
+            alt="Homme d'affaire - Ali Morshedlou"
           />
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
             src="./assets/images/gallery/entreprise/jason-goodman.webp"
+            alt="Femme souriante - Jason Goodman"
           />
           <img
             data-gallery-tag="Mariages"
             class="gallery-item"
             src="./assets/images/gallery/mariage/hannah-busing.webp"
+            alt="Mains qui se touchent"
           />
           <img
             data-gallery-tag="Portrait"
             class="gallery-item"
             src="./assets/images/gallery/portraits/ade-tunji.webp"
+            alt="Visage illuminé"
           />
           <img
             data-gallery-tag="Mariages"
             class="gallery-item"
             src="./assets/images/gallery/mariage/jakob-owens.webp"
+            alt="Photo de mariage"
           />
           <img
             data-gallery-tag="Portrait"
             class="gallery-item"
             src="./assets/images/gallery/portraits/nino-van-prattenburg.webp"
+            alt="Femme touchant un grillage"
           />
           <img
             data-gallery-tag="Concert"
             class="gallery-item"
             src="./assets/images/gallery/concerts/austin-neill.webp"
+            alt="Chanteur en concert"
           />
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
             src="./assets/images/gallery/entreprise/mateus-campos-felipe.webp"
+            alt="Femme souriante"
           />
         </div>
       </div>
@@ -282,7 +292,7 @@
           </form>
         </div>
         <div class="picture right">
-          <img src="./assets/images/camera.webp" />
+          <img src="./assets/images/camera.webp" alt="Appareil photo" />
         </div>
       </div>
     </div>
