structured data added

--- a/index.html
+++ b/index.html
@@ -20,6 +20,65 @@
     <script src="./assets/bootstrap/bootstrap.bundle.js"></script>
     <script defer src="./assets/maugallery.min.js"></script>
     <script defer src="./assets/scripts.js"></script>
+    <script type="application/ld+json">
+      {
+        "@context": "http://schema.org/",
+        "@graph": [
+          {
+            "@type": "WebSite",
+            "@id": "https://nina-carducci.github.io/#website",
+            "url": "https://nina-carducci.github.io/",
+            "name": "Nina Carducci",
+            "description": "Photographe freelance",
+            "inLanguage": "fr-FR",
+            "image": "https://nina-carducci.github.io/assets/images/nina.webp" // Ajout de l'image pour le site web
+          },
+          {
+            "@type": "WebPage",
+            "@id": "https://nina-carducci.github.io/#webpage",
+            "url": "https://nina-carducci.github.io/",
+            "name": "Nina Carducci - Photographe | Page d’accueil",
+            "isPartOf": { "@id": "https://nina-carducci.github.io/#website" },
+            "description": "Réalisez vos Shootings, Retouches et Albums photos avec Nina Carducci. Découvrez ici son portfolio : spectacles, mariages, portraits, entrepreneuriat…",
+            "inLanguage": "fr-FR",
+            "potentialAction": [
+              {
+                "@type": "ReadAction",
+                "target": ["https://nina-carducci.github.io/"]
+              }
+            ],
+            "image": "https://nina-carducci.github.io/assets/images/nina.webp" // Ajout de l'image pour la page
+          },
+          {
+            "@type": "ProfessionalService",
+            "currenciesAccepted": "EUR",
+            "openingHours": "Mo,Tu,We,Th,Fr 10:00-19:00",
+            "paymentAccepted": "Cash, Credit Card",
+            "priceRange": "50-400 €",
+            "address": {
+              "@type": "PostalAddress",
+              "addressCountry": "FR",
+              "addressLocality": "Bordeaux, France",
+              "postalCode": "F-33200",
+              "streetAddress": "68 avenue Alsace-Lorraine"
+            },
+            "areaServed": {
+              "@type": "AdministrativeArea",
+              "name": ["Île de France", "Bordeaux"]
+            },
+            "email": "ninacarducci@openclassrooms.com",
+            "legalName": "Nina Carducci",
+            "numberOfEmployees": { "@type": "QuantitativeValue", "value": 1 },
+            "slogan": "Capturez vos moments les plus précieux et gardez un souvenir impérissable.",
+            "telephone": "+33556677889",
+            "description": "Photographe freelance",
+            "name": "Nina Carducci",
+            "url": "https://nina-carducci.github.io/",
+            "image": "https://nina-carducci.github.io/assets/images/nina.webp" // Ajout de l'image pour le service professionnel
+          }
+        ]
+      }
+    </script>
   </head>
   <body>
     <header class="top-header">
