Meta description added

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="fr">
   <head>
     <title>Nina Carducci - L'art de la photographie</title>
+    <meta
+      name="description"
+      content="Explorez l'univers captivant de Nina Carducci, photographe passionnée. Découvrez ses créations artistiques, des portraits émouvants aux paysages sublimes. Profitez de ses services de photographie professionnelle pour immortaliser vos moments les plus précieux. Contactez-la dès aujourd'hui pour des souvenirs inoubliables."
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/bootstrap/bootstrap.css" />
     <link rel="stylesheet" href="./assets/style.min.css" />
@@ -31,7 +35,7 @@
             "name": "Nina Carducci",
             "description": "Photographe freelance",
             "inLanguage": "fr-FR",
-            "image": "https://nina-carducci.github.io/assets/images/nina.webp" // Ajout de l'image pour le site web
+            "image": "https://nina-carducci.github.io/assets/images/nina.webp"
           },
           {
             "@type": "WebPage",
@@ -47,7 +51,7 @@
                 "target": ["https://nina-carducci.github.io/"]
               }
             ],
-            "image": "https://nina-carducci.github.io/assets/images/nina.webp" // Ajout de l'image pour la page
+            "image": "https://nina-carducci.github.io/assets/images/nina.webp"
           },
           {
             "@type": "ProfessionalService",
@@ -74,7 +78,7 @@
             "description": "Photographe freelance",
             "name": "Nina Carducci",
             "url": "https://nina-carducci.github.io/",
-            "image": "https://nina-carducci.github.io/assets/images/nina.webp" // Ajout de l'image pour le service professionnel
+            "image": "https://nina-carducci.github.io/assets/images/nina.webp"
           }
         ]
       }
