--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
       name="description"
       content="Explorez l'univers captivant de Nina Carducci, photographe passionnée. Découvrez ses créations artistiques, des portraits émouvants aux paysages sublimes. Profitez de ses services de photographie professionnelle pour immortaliser vos moments les plus précieux. Contactez-la dès aujourd'hui pour des souvenirs inoubliables."
     />
+    <meta property="og:locale" content="fr_FR" />
+    <meta property="og:language" content="fr" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Nina Carducci - L'art de la photographie"
+    />
+    <meta
+      property="og:description"
+      content="Explorez l'univers captivant de Nina Carducci, photographe passionnée située à Bordeaux. Découvrez ses créations artistiques, des portraits émouvants aux paysages sublimes. Profitez de ses services de photographie professionnelle pour immortaliser vos moments les plus précieux. Contactez-la dès aujourd'hui pour des souvenirs inoubliables."
+    />
+    <meta property="og:url" content="https://nina-carducci.github.io/" />
+    <meta property="og:site_name" content="nina-carducci.github.io" />
+    <meta
+      property="og:image"
+      content="https://kaazell.github.io/P5-2024/assets/images/nina.jpg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/bootstrap/bootstrap.css" />
     <link rel="stylesheet" href="./assets/style.min.css" />
