--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
       name="description"
       content="Explorez l'univers captivant de Nina Carducci, photographe passionnée. Découvrez ses créations artistiques, des portraits émouvants aux paysages sublimes. Profitez de ses services de photographie professionnelle pour immortaliser vos moments les plus précieux. Contactez-la dès aujourd'hui pour des souvenirs inoubliables."
     />
+    <!-- meta tags -->
     <meta property="og:locale" content="fr_FR" />
-    <meta property="og:language" content="fr" />
     <meta property="og:type" content="website" />
     <meta
       property="og:title"
@@ -21,8 +21,25 @@
     <meta property="og:site_name" content="nina-carducci.github.io" />
     <meta
       property="og:image"
-      content="https://kaazell.github.io/P5-2024/assets/images/nina.jpg"
+      content="https://nina-carducci.github.io/assets/images/nina.webp"
     />
+
+    <!-- Twitter-specific meta tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Nina Carducci - L'art de la photographie"
+    />
+    <meta
+      name="twitter:description"
+      content="Explorez l'univers captivant de Nina Carducci, photographe passionnée située à Bordeaux. Découvrez ses créations artistiques, des portraits émouvants aux paysages sublimes. Profitez de ses services de photographie professionnelle pour immortaliser vos moments les plus précieux."
+    />
+    <meta name="twitter:url" content="https://nina-carducci.github.io/" />
+    <meta
+      name="twitter:image"
+      content="https://nina-carducci.github.io/assets/images/nina.webp"
+    />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/bootstrap/bootstrap.css" />
     <link rel="stylesheet" href="./assets/style.min.css" />
