--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       name="description"
       content="Explorez l'univers captivant de Nina Carducci, photographe passionnée. Découvrez ses créations artistiques, des portraits émouvants aux paysages sublimes. Profitez de ses services de photographie professionnelle pour immortaliser vos moments les plus précieux. Contactez-la dès aujourd'hui pour des souvenirs inoubliables."
     />
+    <meta name="robots" content="index, follow" />
     <!-- meta tags -->
     <meta property="og:locale" content="fr_FR" />
     <meta property="og:type" content="website" />
