aria-label added for the slider

--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
           </div>
         </div>
         <button
+          aria-label="Photographie précédente"
           class="carousel-control-prev"
           type="button"
           data-bs-target="#carouselExampleIndicators"
@@ -202,6 +203,7 @@
           <span class="visually-hidden">Previous</span>
         </button>
         <button
+          aria-label="Photographie suicante"
           class="carousel-control-next"
           type="button"
           data-bs-target="#carouselExampleIndicators"
