complete lighthouse audit pdf

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
           <span class="visually-hidden">Previous</span>
         </button>
         <button
-          aria-label="Photographie suicante"
+          aria-label="Photographie suivante"
           class="carousel-control-next"
           type="button"
           data-bs-target="#carouselExampleIndicators"
